lesson9/css/prophets.css
body {
    font-family: 'Lobster', cursive;
}

h1 {
    text-align: center;
    color: darkorange;
}

h2 {
    color: darkorange;
}

p {
    margin: 0;
}

img {
    margin-top: 15px;
    border-radius: 5px;
    box-shadow: 0 0 10px #111;
}

.cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(380px,1fr));
}

section {
    padding: 15px 0px 15px 0px;
    margin: 3px;
    border: 1px solid darkorange;
    background-color: lightgoldenrodyellow;
    display: grid;
    justify-content: center;
    text-align: center;
}

